--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -10,13 +11,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <title>LiveChat</title>
   </head>
   <body>
-    <div class="d-flex">
-      <!-- <div class="col-4">
-        <div class="mb-3 col-12 m-2 p-2">
-          <div class=" bg-light bg-gradient">
-            <h3>Login</h3>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4">
+          <!-- Login and Signup Blocks -->
+          <div id="loginBlock" class="mb-3 col-12 m-2 p-2 bg-light bg-gradient">
+            <h3 id="showLogin" class="ptr">Login</h3>
             <form id="loginForm">
               <input id="loginEmail" class="form-control" placeholder="Email" />
               <input
@@ -30,12 +33,17 @@
               </button>
             </form>
           </div>
-        </div>
-        <div class="mb-3 col-12 m-2 p-2">
-          <div class="bg-light bg-gradient">
-            <h3>SignUp</h3>
+          <div
+            id="signupBlock"
+            class="mb-3 col-12 m-2 p-2 bg-light bg-gradient"
+          >
+            <h3 id="showSignup" class="ptr">SignUp</h3>
             <form id="signupForm">
-              <input id="signupEmail" class="form-control" placeholder="Email" />
+              <input
+                id="signupEmail"
+                class="form-control"
+                placeholder="Email"
+              />
               <input
                 id="signupPassword"
                 type="password"
@@ -46,41 +54,67 @@
                 Signup
               </button>
             </form>
-  
+          </div>
+
+          <!-- Welcome message when the user is logged in -->
+          <div
+            id="welcomeMessage"
+            class="mb-3 col-12 m-2 p-2 bg-light bg-gradient"
+            style="display: none"
+          >
+            <h3>Welcome <span id="welcomeuser"></span></h3>
+            <button id="logout" class="btn btn-danger">Logout</button>
           </div>
         </div>
-      </div> -->
-      <div class="col-12">
-        <div class="container chat-container bg-light bg-gradient mt-2">
-          <div class="bg-light chat-box">
-            <h1 class="h5 mb-2">ChatRooms</h1>
-            <div class="mb-3">
-              <div id="chatroomList" class="d-flex flex-wrap"></div>
-            </div>
-            <div class="mb-3">
-              <input id="name" class="form-control" placeholder="Your Name" />
-            </div>
-            <div class="row d-flex">
-              <div class="mb-2 col-9">
-                <textarea
-                  id="message"
+
+        <!-- Chat Section -->
+        <div class="col-lg-8">
+          <div class="container chat-container mt-2 bg-light bg-gradient">
+            <div class="chat-box bg-light">
+              <h1 class="h5 mb-2">ChatRooms</h1>
+
+              <!-- Chatroom List -->
+              <div class="mb-3">
+                <div id="chatroomList" class="d-flex flex-wrap"></div>
+              </div>
+
+              <!-- Name Input -->
+              <div class="mb-3">
+                <input
+                  id="name"
                   class="form-control"
-                  placeholder="Type your message"
-                ></textarea>
+                  placeholder="Your Name"
+                  readonly
+                />
               </div>
-              <div class="col-3">
-                <button id="send" class="btn btn-success mt-2">Send</button>
-                <button id="createRoom" class="btn btn-primary mt-2">
-                  Create New Room
-                </button>
+
+              <!-- Message Input and Buttons -->
+              <div class="row d-flex">
+                <div class="mb-2 col-9">
+                  <textarea
+                    id="message"
+                    class="form-control"
+                    placeholder="Type your message"
+                  ></textarea>
+                </div>
+                <div class="col-3">
+                  <button id="send" class="btn btn-success mt-2">Send</button>
+                  <button id="createRoom" class="btn btn-primary mt-2">
+                    Create New Room
+                  </button>
+                </div>
               </div>
             </div>
+
+            <!-- Messages Container -->
+            <br />
+            <div id="messages" class="chat-box"></div>
           </div>
-          <br />
-          <div id="messages" class="chat-box"></div>
         </div>
       </div>
     </div>
+
+    <!-- JavaScript and jQuery -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
